Another refactoring. Added avatar. Added more tests. Implemented limits.